# Apple-Health-Resonator-CLI

./: .gitignore  .mailmap  AGENTS.md  Cargo.toml  QUERY_GUIDE.md  README.md
.codex/skills/apple-health-resonator-cli/: SKILL.md
.codex/skills/apple-health-resonator-cli/agents/: openai.yaml
.github/workflows/: ci.yml  quality.yml  release.yml
Skill/: SKILL.md
Skill/references/: query-patterns.md
docs/: Architecture_Skeleton_v1_1.md  PRD - Engineering Spec v1.0.md
src/: lib.rs  main.rs
src/app/: ingest_service.rs  inspect_service.rs  mod.rs  query_service.rs  stats_service.rs
src/cli/: args.rs  ingest.rs  inspect.rs  mod.rs  query.rs  stats.rs
src/domain/: ingest_run.rs  mod.rs  raw.rs  record.rs  types.rs  workout.rs
src/infra/: error.rs  logging.rs  mod.rs  time.rs
src/output/: json.rs
src/parser/: csv_reader.rs  extractor.rs  file_names.rs  input.rs  mod.rs  normalizer.rs  xml_reader.rs
src/storage/: connection.rs  mod.rs  query.rs  schema.rs  writer.rs
tests/: cli_contract.rs  dedupe.rs  ingest_basic.rs  ingest_zip.rs  inspect.rs  query_json.rs  stats.rs
tests/support/: mod.rs
