[package]
name = "apple-health-resonator"
version = "0.2.0"
edition = "2021"
description = "High-performance Rust CLI for ingesting Apple Health export into DuckDB"
license = "MIT"

[[bin]]
name = "ahr"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
indicatif = "0.17"
quick-xml = "0.37"
duckdb = { version = "1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
zip = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
